# ledger_link

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: backend-tests.yml  export-identity-slides.yml  test-identity-postman.yml
adr/: 0000-template.md  0001-system-architecture.md  0002-authentication-model.md
docker/: api-gateway.Dockerfile  identity-service.Dockerfile  payments-service.Dockerfile  risk-service.Dockerfile  wallet-service.Dockerfile
docs/architecture/: high-level-diagram.md  identity-endpoints.md  identity-service-flows.excalidraw.json
docs/daily-notes/: day1.md
docs/postman/: README.md  RUN-COLLECTION.md  identity-gateway.local.postman_environment.json  identity-service-extended.local.postman_environment.json  identity-service-extended.postman_collection.json  identity-service.local.postman_environment.json  identity-service.postman_collection.json  payments-gateway.local.postman_environment.json  payments-gateway.postman_collection.json  risk-service.local.postman_environment.json  risk-service.postman_collection.json  wallet-gateway.postman_collection.json
docs/runbooks/: authentication-incident.md  identity-quick-verification.md
docs/slides/: README.md  confluence-identity-service.md  identity-service-slides.md
fintech_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
libs/shared/: pyproject.toml
observability/: prometheus.yml
observability/grafana/dashboards/: wallet_overview.json
scripts/: generate_openapi.py
services/api_gateway/: pyproject.toml
services/api_gateway/app/: __init__.py  main.py  metrics.py  middleware.py  settings.py  startup.py
services/api_gateway/app/routes/: __init__.py  catalog.py  health.py  identity.py  payments.py  wallet.py
services/api_gateway/tests/: test_gateway_routes.py
services/identity_service/: pyproject.toml
services/identity_service/app/: alembic_helper.py  dependencies.py  main.py  metrics.py  settings.py  startup.py
services/identity_service/app/core/: keys.py  security.py
services/identity_service/app/db/: seed_users.py  session.py
services/identity_service/app/db/migrations/: README.md  alembic.ini  env.py
services/identity_service/app/db/migrations/versions/: 20251030_0001_create_identity_tables.py  20251030_0002_extend_user_model.py  20251105_0003_refresh_tokens.py
services/identity_service/app/models/: __init__.py  refresh_token.py  user.py
services/identity_service/app/routes/: __init__.py  auth.py  system.py
services/identity_service/app/schemas/: __init__.py  auth.py
services/identity_service/app/services/: __init__.py  refresh_tokens.py
services/identity_service/tests/: test_health.py  test_tokens.py
services/payments_service/: pyproject.toml
services/payments_service/app/: alembic_helper.py  dependencies.py  main.py  metrics.py  settings.py  startup.py
services/payments_service/app/db/: base.py  session.py
services/payments_service/app/db/migrations/: env.py
services/payments_service/app/db/migrations/versions/: 20251030_0001_initial.py  20251107_0002_payment_hold_column.py
services/payments_service/app/models/: payment_intent.py
services/payments_service/app/routes/: payment_intents.py
services/payments_service/app/schemas/: payment_intent.py
services/payments_service/tests/: test_payment_intents.py
services/risk_service/: pyproject.toml
services/risk_service/app/: alembic_helper.py  dependencies.py  main.py  metrics.py  risk_engine.py  settings.py
services/wallet_service/: pyproject.toml
services/wallet_service/app/: alembic_helper.py  dependencies.py  main.py  metrics.py  settings.py  startup.py
services/wallet_service/app/db/: session.py
services/wallet_service/app/db/migrations/: alembic.ini  env.py
services/wallet_service/app/db/migrations/versions/: 20251030_0001_initial.py  20251102_0002_wallet_tables.py  20251107_0003_wallet_holds.py  20251107_0004_wallet_transfers_outbox.py
services/wallet_service/app/models/: __init__.py  hold.py  ledger_entry.py  outbox_event.py  transfer.py  wallet.py
services/wallet_service/app/routes/: __init__.py  system.py  wallet.py
services/wallet_service/app/schemas/: __init__.py  wallet.py
services/wallet_service/tests/: test_wallet_routes.py
(+22 files in other folders)
